# automake-example

./: Makefile.in  config.h.in  configure.ac
src/: Makefile.am  parser.c
src/haswell/: parser.c  parser.h
src/westmere/: parser.c  parser.h
